# engram

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  issues.md
apps/backend/: Dockerfile  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
apps/backend/engram/: __init__.py  celery_app.py  celery_bootsteps.py  celeryconfig.py
apps/backend/engram/access/: access_models_tests.py  access_scope_tests.py  admin_capabilities_seed_tests.py  agent_scope_tests.py  apps.py  auth_serializers.py  auth_services.py  auth_services_tests.py  auth_tests.py  auth_urls.py  auth_views.py  models.py  organization_access.py  organization_access_tests.py  organization_enforcement_tests.py  request_scope.py  request_scope_tests.py  services.py
apps/backend/engram/console/: apps.py  exceptions.py  exceptions_tests.py  filters.py  filters_tests.py  integration_tests.py  metrics_service.py  metrics_service_tests.py  model_presets.py  model_presets_tests.py  org_resolution.py  org_resolution_tests.py  permissions.py  permissions_tests.py  search_debug_service.py  search_debug_service_tests.py  services.py  services_tests.py  urls.py
apps/backend/engram/context/: __init__.py  apps.py  context_api_tests.py  reembed_tests.py  retrieval_warnings.py  retrieval_warnings_tests.py  serializers.py  services.py  services_tests.py  term_extraction.py  term_extraction_tests.py  urls.py  views.py
apps/backend/engram/core/: application_foundation_tests.py  apps.py  celery_foundation_tests.py  core_models_tests.py  curation_decision_models_tests.py  deployment_contract_tests.py  distillation_models_tests.py  environment.py  environments.py  export.py  export_tests.py  golden_path_tests.py  migrations_tests.py  models.py  pgvector_tests.py  redaction.py  redis_sentinel.py  repository.py  repository_tests.py  retries_checker.py  retryable_django_task.py
apps/backend/engram/health/: apps.py  health_tests.py  urls.py  views.py
apps/backend/engram/hooks/: apps.py  hook_ingest_tests.py  repo_routing_tests.py  serializers.py  services.py  urls.py  views.py
apps/backend/engram/imports/: apps.py  batch_core_tests.py  batch_services.py  batch_services_tests.py  import_api_tests.py  models.py  models_tests.py  serializers.py  services.py  services_tests.py  (+4 more)
apps/backend/settings/: asgi.py  logs.py  logs_tests.py  settings.py  settings_tests.py  test_settings.py  urls.py  wsgi.py
(+706 files in other folders)
