[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
Django = "^5.2"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
drf-spectacular = "^0.28.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}
redis = {extras = ["hiredis"], version = "^5.2.1"}
celery = "^5.5.3"
gunicorn = "^23.0.0"
django-celery-outbox = "0.4.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
sentry-sdk = "^2.27.0"
structlog = "^25.2.0"
structlog-sentry = "^2.2.1"
django-structlog = "^9.1.1"
django-redis = "^7.0.0"
cryptography = "^49.0.0"
django-cors-headers = "^4.9.0"
pgvector = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.11.1"
ruff = "^0.15.20"

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = [
  "W", "ARG", "ANN", "ASYNC", "B", "COM", "C4", "C90", "DTZ",
  "E", "ERA", "F", "UP", "T10", "T20", "Q", "S", "I", "N", "YTT", "PTH",
]
lint.ignore = [
  "ANN401", "ARG001", "ARG002", "COM812", "S101", "S105",
]
lint.exclude = [
  ".git", ".mypy_cache", ".ruff_cache", "__pycache__", "*/migrations/**",
]
lint.fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
